--- a/static/timeline.html
+++ b/static/timeline.html
@@ -33,5 +33,11 @@
             </div>
         </div>
       </div>
+      <div class="text-content-container">
+        <div class="text-content">
+            <h1>Thingy here</h1>
+            <p>more text here ajkfsrkjgdbnfskejjklefgkhdrjlfe;angsrlkdbsjelfawmengjsbrkdekldwmnfejh</p>
+        </div>
+      </div>
 </body>
 </html>
